--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-timelines-updated",
-  "version": "2.1.3",
-  "description": "React Timelines: Updated",
+  "name": "react-timelines.ts",
+  "version": "1.0.1",
+  "description": "React Timelines with Typescript support",
   "homepage": "https://nicholasgriffintn.github.io/react-timelines/",
   "main": "lib/src/index.js",
   "scripts": {
@@ -98,6 +98,7 @@
     "prettier": "2.8.8",
     "react-dom": "18.2.0",
     "rimraf": "5.0.0",
+    "sass": "^1.68.0",
     "semantic-release": "^21.0.1",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
